--- a/src/components/ProgramSection/ProgramSection.css
+++ b/src/components/ProgramSection/ProgramSection.css
@@ -211,18 +211,60 @@ html {
 /* Responsive Design */
 
 
-/* For tablets (screens up to 768px wide) */
+/* General Settings */
 
-@media (max-width: 768px) {
+html {
+    scroll-behavior: smooth;
+}
+
+
+/* Custom Row */
+
+.custom-row {
+    display: flex;
+    padding: 0px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    position: relative;
+    background: url('../../assets/images/programbg.png') no-repeat center center/cover;
+    padding-top: 90px;
+    border-top: solid #ffc400 10px;
+}
+
+
+/* Overlay for Shade */
+
+.custom-row::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+
+/* For Tablets (screens up to 1024px wide) */
+
+@media (max-width: 1024px) {
+    .custom-row {
+        padding: 20px;
+        flex-direction: column;
+        gap: 20px;
+    }
     .custom-column {
         width: 100%;
         height: auto;
+        padding: 10px;
     }
     .no-animation {
         padding: 20px;
     }
     .h6-wrapper h6 {
-        font-size: 0.9rem;
+        font-size: 1rem;
         text-align: center;
     }
     .no-animation h2 {
@@ -230,11 +272,11 @@ html {
         text-align: center;
     }
     .no-animation p {
-        font-size: 0.9rem;
+        font-size: 1rem;
         margin-left: 20px;
     }
     .icon-wrapper {
-        margin-left: 20px;
+        margin-left: 80px;
     }
     .discover-button {
         margin-left: 20px;
@@ -242,7 +284,7 @@ html {
 }
 
 
-/* For mobile phones (screens up to 480px wide) */
+/* For Mobile (screens up to 480px wide) */
 
 @media (max-width: 480px) {
     .custom-row {
@@ -271,8 +313,6 @@ html {
         margin-left: 10px;
         display: flex;
         margin-left: 75px;
-        /* Center the icon and text horizontally */
-        /* Align them vertically in the middle */
         margin-bottom: 15px;
     }
     .discover-button {
@@ -282,28 +322,21 @@ html {
         margin-top: 20px;
         align-items: center;
         display: flex;
-        /* Make it a flex container */
         justify-content: center;
-        /* Horizontally center the button content */
         margin-left: auto;
-        /* Align it to the center */
         margin-right: auto;
-        /* Align it to the center */
     }
     /* Centering the h6 and zodiac-icon in mobile */
     .h6-wrapper {
         display: flex;
         justify-content: center;
-        /* Center horizontally */
         align-items: center;
-        /* Align vertically */
         margin-bottom: 15px;
     }
     .h6-wrapper h6 {
         font-size: 0.9rem;
         margin-left: 1px;
         text-align: center;
-        /* Ensure text is centered */
     }
     .zodiac-icon {
         width: 25px;
