--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -9,9 +9,7 @@
     gap: 40px;
 }
 
-
 /* Title Section */
-
 .section-sub-title1 {
     font-size: 1.2rem;
     color: #ff8c00;
@@ -30,23 +28,22 @@
 
 .pclass {
     text-align: center;
-    max-width: 800px;
+    max-width: 950px;
     margin: 0 auto;
     color: #555555;
-    font-size: 1rem;
+    font-size: 0.9rem; /* Make text smaller */
     line-height: 1.8;
     font-weight: 100;
     margin-top: -30px;
     padding: 10px;
 }
 
-
 /* New Layout */
-
 .about-container {
     display: flex;
-    width: 1100px;
-    height: 400px;
+    width: 100%;
+    max-width: 1100px;
+    height: auto; /* Set height to auto */
     gap: 40px;
     background: linear-gradient(184deg, #ffffff 0%, rgba(255, 235, 191, 0.4) 100%);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -58,7 +55,7 @@
 
 .about-image {
     flex: 1;
-    height: 100%;
+    height: auto; /* Set height to auto */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,7 +63,7 @@
 
 .about-image img {
     width: 100%;
-    height: 100%;
+    height: 550px; /* Set height to auto */
     object-fit: cover;
 }
 
@@ -85,14 +82,18 @@
 
 .about-content h3 {
     color: #4f4f4f;
-    font-size: 1.8rem;
+    font-size: 1.6rem; /* Make text smaller */
     font-weight: bold;
     margin-bottom: 15px;
+}
+.dash-text {
+    color: black;
+ 
 }
 
 .about-content p {
     margin-bottom: 20px;
-    font-size: 1rem;
+    font-size: 0.9rem; /* Make text smaller */
     line-height: 1.6;
     font-weight: 100;
     text-align: justify;
@@ -116,7 +117,7 @@
 
 .about-video {
     flex: 1;
-    height: 100%;
+    height: auto; /* Set height to auto */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -124,7 +125,7 @@
 
 .about-video video {
     width: 100%;
-    height: 100%;
+    height: 620px; /* Set height to auto */
     object-fit: cover;
 }
 
@@ -132,7 +133,7 @@
     list-style: none;
     padding: 0;
     font-weight: 100;
-    font-size: .9rem;
+    font-size: 0.9rem; /* Make text smaller */
 }
 
 .checklist li {
@@ -147,12 +148,9 @@
     margin-left: 20px;
 }
 
-
 /* Responsive Design */
 
-
 /* Mobile styles */
-
 @media (max-width: 768px) {
     .about-container {
         flex-direction: column;
@@ -166,14 +164,16 @@
         width: 100%;
         height: auto;
     }
+    .about-image img,
+    .about-video video {
+        height: 300px; /* Reduced height for mobile */
+    }
     .about-content {
         padding: 20px;
     }
 }
 
-
 /* Tablet styles */
-
 @media (min-width: 768px) and (max-width: 1024px) {
     .about-container {
         flex-direction: column;
