--- a/src/components/MeetMaarisonAcharya/MeetMaarisonAcharya.css
+++ b/src/components/MeetMaarisonAcharya/MeetMaarisonAcharya.css
@@ -5,8 +5,9 @@
     margin: 0;
     padding: 0;
     font-family: "Poppins", Arial, sans-serif;
-    background-color: #ffffff;
+    background-color: #fdf6e8;
     color: #666666;
+    margin-bottom: -30px;
 }
 
 
