--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,7 @@ body {
 
 /* Navbar Styling */
 .custom-navbar {
-    background-color: #fff7e2;
+    background: linear-gradient(to right, #ffffff, #ffeaaf);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     transition: background-color 0.3s ease, top 0.3s ease;
@@ -95,6 +95,7 @@ body {
     border-radius: 0.375rem;
     cursor: pointer;
     transition: background-color 0.3s;
+    text-decoration: none; /* Remove underline */
 }
 
 .button:hover {
