--- a/src/components/MeetMaarisonAcharya/MeetMaarisonAcharya.css
+++ b/src/components/MeetMaarisonAcharya/MeetMaarisonAcharya.css
@@ -156,7 +156,7 @@
     background: linear-gradient(45deg, #ffffff, #ffffff);
     transform: translateY(-5px) scale(1.01);
     color: #1c1c1c;
-    border: 1px solid #1c1c1c;
+    border: 1px solid #1c1c1c36;
 }
 
 
